fixbug: box spacing

--- a/assembl/static/css/components/_panel.scss
+++ b/assembl/static/css/components/_panel.scss
@@ -33,6 +33,11 @@
   .panel-editablebox.is-editing {
     .panel-editablearea {
       color: $black;
+      word-break: break-all;
+      -ms-word-break: break-all;
+      -webkit-hyphens: auto;
+      -moz-hyphens: auto;
+      hyphens: auto;
     }
   }
 
