--- a/assembl/static/css/layout/_ideaPanel.scss
+++ b/assembl/static/css/layout/_ideaPanel.scss
@@ -69,6 +69,10 @@
   border: 1px solid transparent;
   padding: 0px 0px 9px 6px;
   overflow-y: hidden;
+  word-break: break-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
   &:hover {
     @include box-shadow(rgba(0, 0, 0, 0.1) 0px 1px 1px inset);
     border: 1px solid #cccccc;
